--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,9 +2,10 @@
 <html lang="{{ site.lang | default: 'ko' }}">
 {% include head.html %}
 <body>
+  <a href="#main-content" class="skip-link">본문으로 건너뛰기</a>
   {% include header.html %}
 
-  <main class="main-content">
+  <main id="main-content" class="main-content" role="main">
     <div class="container">
       {{ content }}
     </div>
